# TraderJournal

./: .gitignore  CMakeLists.txt  Мой проект.txt
lib/: CMakeLists.txt
resources/: resources.qrc
src/: CMakeLists.txt  daytilewidget.h  daytilewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/widgets/: calendar.ui  daytilewidget.cpp  daytilewidget.ui  titlebar.cpp  titlebar.h  titlebar.ui
tests/: CMakeLists.txt
